--- a/app/globals.css
+++ b/app/globals.css
@@ -77,5 +77,5 @@
 }
 
 .containerMod {
-  @apply flex flex-col justify-center items-center max-w-[1440px] mx-auto;
+  @apply max-w-[1440px] w-full mx-auto;
 }
